--- a/src/Arkivverket.Arkade.GUI/Properties/Settings.settings
+++ b/src/Arkivverket.Arkade.GUI/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="DarkModeEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SelectedUILanguage" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SelectedOutputLanguage" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
